--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <h5>Jeferson</h5>
     <h6>Jeferson</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae deleniti commodi, iste harum dolore ipsa dolorum a cumque in unde cum natus voluptatum temporibus, neque perferendis minus tempore maiores laboriosam!</p>
+    <a href="listas.html">Listas</a>
+    <a href="enlaces.html">Enlaces</a>
+    <a href="imagenes.html">Imágenes en HTML</a>
+    <a href="routes/rutas.html">Rutas en HTML</a>
+    <a href="formularios.html">Formularios en HTML</a>
+    <a href="propiedades_texto.html">Propiedades Texto CSS</a>
 </body>
 </html> 
