box model dalto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeferson Mellado</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body> 
     <h1>Jeferson</h1>
@@ -20,5 +20,6 @@
     <a href="routes/rutas.html">Rutas en HTML</a>
     <a href="formularios.html">Formularios en HTML</a>
     <a href="propiedades_texto.html">Propiedades Texto CSS</a>
+    <a href="box-model.html">Modelo de  cajas</a>
 </body>
 </html> 
