--- a/propiedades_texto.html
+++ b/propiedades_texto.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Propiedades de Texto</title>
     <link rel="stylesheet" href="src/css/propiedades_texto.css">
+    <link rel="stylesheet" href="src/css/fonts.css">
 </head>
 <body>
     <h1 class="titulo">Propiedades de Texto HTML y CSS</h1>
     <h2>HTML</h2>
     <h2 class="subtitulo">CSS</h2>
     <p>Lorem <span class="texo-sin-decoracion">ipsum</span> dolor sit amet consectetur adipisicing elit. Illo eaque nobis, eligendi natus delectus, molestiae iusto est fuga velit aperiam quia cum similique quam eos omnis, quis unde facere corporis?</p>
-</body>
+    <a href="index.html">Volver</a>
+</body> 
 </html>
