--- a/box-model.html
+++ b/box-model.html
@@ -9,13 +9,16 @@
   </head>
   <body>
     <h1>MODELO DE CAJAS</h1>
-    <div class="caja">
-      <form  class="formulario" action="">
-        <input class="form-input" type="text" />
-        <input class="form-input" type="text" />
-        <input class="form-input" type="submit" />
-      </form>
+
+    <form class="formulario" action="">
+      <input class="form-input" type="text" placeholder="usuario"/>
+      <input class="form-input" type="text" />
+      <input class="form-submit" type="submit" />
+    </form>
+    <div class="box">
+      El margen más grande entre dos elementos predomina
     </div>
     <a href="index.html">Volver a Inicio</a>
+    <a href="ejercicios/ejercicio_01.html">ejercicio_01</a>
   </body>
 </html>
