--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <a href="formularios.html">Formularios en HTML</a>
     <a href="propiedades_texto.html">Propiedades Texto CSS</a>
     <a href="box-model.html">Modelo de  cajas</a>
+    <a href="bordes.html">Bordes en HTML</a>
 </body>
 </html> 
