--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeferson Mellado</title>
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/fonts.css">
 </head>
-<body> 
+
+<body>
+    <nav>
+        <a class="nav-item" href="enlaces.html">Enlaces</a>
+        <a class="nav-item" href="imagenes.html">Imágenes en HTML</a>
+        <a class="nav-item" href="routes/rutas.html">Rutas en HTML</a>
+        <a class="nav-item" href="formularios.html">Formularios en HTML</a>
+        <a class="nav-item" href="propiedades_texto.html">Propiedades Texto CSS</a>
+        <a class="nav-item" href="box-model.html">Modelo de cajas</a>
+        <a class="nav-item" href="bordes.html">Bordes en HTML</a>
+        <a class="nav-item" href="colores.html">Colores en HTML</a>
+    </nav>
     <h1>Jeferson</h1>
     <h2>Jeferson</h2>
     <h3>Jeferson</h3>
     <h4>Jeferson</h4>
     <h5>Jeferson</h5>
     <h6>Jeferson</h6>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae deleniti commodi, iste harum dolore ipsa dolorum a cumque in unde cum natus voluptatum temporibus, neque perferendis minus tempore maiores laboriosam!</p>
-    <a href="listas.html">Listas</a>
-    <a href="enlaces.html">Enlaces</a>
-    <a href="imagenes.html">Imágenes en HTML</a>
-    <a href="routes/rutas.html">Rutas en HTML</a>
-    <a href="formularios.html">Formularios en HTML</a>
-    <a href="propiedades_texto.html">Propiedades Texto CSS</a>
-    <a href="box-model.html">Modelo de  cajas</a>
-    <a href="bordes.html">Bordes en HTML</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae deleniti commodi, iste harum dolore ipsa
+        dolorum a cumque in unde cum natus voluptatum temporibus, neque perferendis minus tempore maiores laboriosam!
+    </p>
+
 </body>
-</html> 
+
+</html>
