--- a/ejercicios/ejercicio_01.html
+++ b/ejercicios/ejercicio_01.html
@@ -18,5 +18,8 @@
         repudiandae. Fugit, minima?
       </p>
     </div>
+    <div class="card">
+      <a href="../index.html">Volver a Inicio</a>
+    </div>
   </body>
 </html>
