--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <a class="nav-item" href="propiedades_texto.html">Propiedades Texto CSS</a>
         <a class="nav-item" href="box-model.html">Modelo de cajas</a>
         <a class="nav-item" href="bordes.html">Bordes en HTML</a>
-        <a class="nav-item" href="colores.html">Colores en HTML</a>
+        <a class="nav-item" href="fondos.html">Fondos, Gradientes y Sombras en HTML</a>
+        <a class="nav-item" href="meta.html">Metaetiquetas, comentarios e iconos</a>
+
     </nav>
     <h1>Jeferson</h1>
     <h2>Jeferson</h2>
