--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jeferson Mellado</title>
-    <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/fonts.css">
-</head>
+    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="src/css/fonts.css" />
+    <link rel="shortcut icon" href="src/img/favicon.svg" type="image/x-icon">
+    
+  </head>
 
-<body>
+  <body>
     <nav>
-        <a class="nav-item" href="enlaces.html">Enlaces</a>
-        <a class="nav-item" href="imagenes.html">Imágenes en HTML</a>
-        <a class="nav-item" href="routes/rutas.html">Rutas en HTML</a>
-        <a class="nav-item" href="formularios.html">Formularios en HTML</a>
-        <a class="nav-item" href="propiedades_texto.html">Propiedades Texto CSS</a>
-        <a class="nav-item" href="box-model.html">Modelo de cajas</a>
-        <a class="nav-item" href="bordes.html">Bordes en HTML</a>
-        <a class="nav-item" href="fondos.html">Fondos, Gradientes y Sombras en HTML</a>
-        <a class="nav-item" href="meta.html">Metaetiquetas, comentarios e iconos</a>
-
+      <a class="nav-item" href="enlaces.html">Enlaces</a>
+      <a class="nav-item" href="imagenes.html">Imágenes en HTML</a>
+      <a class="nav-item" href="routes/rutas.html">Rutas en HTML</a>
+      <a class="nav-item" href="formularios.html">Formularios en HTML</a>
+      <a class="nav-item" href="propiedades_texto.html"
+        >Propiedades Texto CSS</a
+      >
+      <a class="nav-item" href="box-model.html">Modelo de cajas</a>
+      <a class="nav-item" href="bordes.html">Bordes en HTML</a>
+      <a class="nav-item" href="fondos.html"
+        >Fondos, Gradientes y Sombras en HTML</a
+      >
+      <a class="nav-item" href="meta.html"
+        >Metaetiquetas, comentarios e iconos</a
+      >
     </nav>
     <h1>Jeferson</h1>
     <h2>Jeferson</h2>
@@ -28,10 +34,11 @@
     <h4>Jeferson</h4>
     <h5>Jeferson</h5>
     <h6>Jeferson</h6>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae deleniti commodi, iste harum dolore ipsa
-        dolorum a cumque in unde cum natus voluptatum temporibus, neque perferendis minus tempore maiores laboriosam!
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+      deleniti commodi, iste harum dolore ipsa dolorum a cumque in unde cum
+      natus voluptatum temporibus, neque perferendis minus tempore maiores
+      laboriosam!
     </p>
-
-</body>
-
+  </body>
 </html>
