[ADD] working on navbar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="src/css/style.css" />
     <link rel="stylesheet" href="src/css/fonts.css" />
     <link rel="shortcut icon" href="src/img/favicon.svg" type="image/x-icon" />
+    <!-- Incluir Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   </head>
 
   <body>
@@ -18,17 +20,29 @@
     </div>
     <nav class="navbar">
       <div class="navbar-container">
-          <div class="logo">
-              <img src="./src/img/favicon.svg" alt="Logo">
-              <span>Jeferson Mellado</span>
-          </div>
-          <ul class="nav-links">
-              <li><a href="#inicio"><i class="fas fa-home"></i> Inicio</a></li>
-              <li><a href="#experiencia"><i class="fas fa-briefcase"></i> Experiencia</a></li>
-              <li><a href="#proyectos"><i class="fas fa-project-diagram"></i> Proyectos</a></li>
-              <li><a href="#sobremi"><i class="fas fa-info-circle"></i> Sobre mí</a></li>
-          </ul>
+        <div class="logo">
+          <img src="./src/img/favicon.svg" alt="Logo" />
+          <span>Jeferson Mellado</span>
+        </div>
+        <ul class="nav-links">
+          <li>
+            <a href="#inicio"><i class="fas fa-home"></i> Inicio</a>
+          </li>
+          <li>
+            <a href="#experiencia"
+              ><i class="fas fa-briefcase"></i> Experiencia</a
+            >
+          </li>
+          <li>
+            <a href="#proyectos"
+              ><i class="fas fa-project-diagram"></i> Proyectos</a
+            >
+          </li>
+          <li>
+            <a href="#sobremi"><i class="fas fa-info-circle"></i> Sobre mí</a>
+          </li>
+        </ul>
       </div>
-  </nav>
+    </nav>
   </body>
 </html>
