--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,84 +22,42 @@
       </video>
     </div>
     <nav class="navbar">
-      <div class="navbar-container">
-        <div class="logo">
-          <img src="./src/img/favicon.svg" alt="Logo" />
-          <h1>Jeferson Mellado</h1>
-        </div>
-        <ul class="nav-links">
-          <li>
-            <a class="nav-item" href="#" data-target="inicio"
-              ><i class="fas fa-home"></i> Inicio</a
-            >
-          </li>
-          <li>
-            <a class="nav-item" href="#" data-target="experiencia"
-              ><i class="fas fa-briefcase"></i> Experiencia</a
-            >
-          </li>
-          <li>
-            <a class="nav-item" href="#" data-target="proyectos"
-              ><i class="fas fa-project-diagram"></i> Proyectos</a
-            >
-          </li>
-          <li>
-            <a class="nav-item" href="#" data-target="sobremi"
-              ><i class="fas fa-info-circle"></i> Sobre mí</a
-            >
-          </li>
-        </ul>
+      <div class="logo">
+        <img src="./src/img/favicon.svg" alt="Logo" />
+        <h1>Jeferson Mellado</h1>
       </div>
+      <ul class="nav-links">
+        <li>
+          <a class="nav-item" href="#" data-target="inicio"
+            ><i class="fas fa-home"></i> <span class="text">Inicio</span></a
+          >
+        </li>
+        <li>
+          <a class="nav-item" href="#" data-target="experiencia"
+            ><i class="fas fa-briefcase"></i>
+            <span class="text">Experiencia</span></a
+          >
+        </li>
+        <li>
+          <a class="nav-item" href="#" data-target="proyectos"
+            ><i class="fas fa-project-diagram"></i>
+            <span class="text">Proyectos</span></a
+          >
+        </li>
+        <li>
+          <a class="nav-item" href="#" data-target="sobremi"
+            ><i class="fas fa-info-circle"></i>
+            <span class="text">Sobre mí</span></a
+          >
+        </li>
+      </ul>
     </nav>
     <main>
-      <section id="home" class="content-section active">
-        <div class="">
-          <img
-            src="./src/img/favicon.svg"
-            alt="Foto de perfil del desarrollador semi-senior Jeferson Mellado"
-          />
-          <div class="smedia_buttons">
-            <ul class="nav-links">
-              <li>
-                <a class="nav-item" href="#" data-target="inicio"
-                  ><i class="fas fa-home"></i></a
-                >
-              </li>
-              <li>
-                <a class="nav-item" href="#" data-target="experiencia"
-                  ><i class="fas fa-briefcase"></i></a
-                >
-              </li>
-              <li>
-                <a class="nav-item" href="#" data-target="proyectos"
-                  ><i class="fas fa-project-diagram"></i></a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="">
-          <h2>Bienvenido</h2>
-          <p>Contenido de la sección de inicio.</p>
-        </div>
-      </section>
-      <section id="about" class="content-section">
-        <h2>Sobre Mí</h2>
-        <p>Contenido de la sección sobre mí.</p>
-      </section>
-      <section id="projects" class="content-section">
-        <h2>Proyectos</h2>
-        <p>Contenido de la sección de proyectos.</p>
-      </section>
-      <section id="contact" class="content-section">
-        <h2>Contacto</h2>
-        <p>Contenido de la sección de contacto.</p>
-      </section>
+      <section id="inicio" class="content-section active">Inicio</section>
+      <section id="experiencia" class="content-section">Experiencia</section>
+      <section id="proyectos" class="content-section">Proyectos</section>
+      <section id="sobremi" class="content-section">Sobre Mí</section>
     </main>
-
-    <footer>
-      <p>&copy; 2024 Mi Portafolio</p>
-    </footer>
 
     <script src="./src/js/main.js"></script>
   </body>
