--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
   </head>
 
   <body>
-    <div class="video-background">
-      <video id="backgroundVideo" autoplay muted loop>
-        <source src="./src/video/99f6e54243.mp4" type="video/mp4" />
-        Tu navegador no soporta el elemento de video.
-      </video>
-    </div>
+    <div id="particles-js"></div>
     <nav class="navbar">
       <div class="logo">
         <img src="./src/img/favicon.svg" alt="Logo" />
@@ -58,7 +53,7 @@
       <section id="proyectos" class="content-section">Proyectos</section>
       <section id="sobremi" class="content-section">Sobre Mí</section>
     </main>
-
+    <script src="./src/js/particles.min.js"></script>
     <script src="./src/js/main.js"></script>
   </body>
 </html>
