--- a/index.html
+++ b/index.html
@@ -45,15 +45,74 @@
             <span class="text">Sobre mí</span></a
           >
         </li>
+        <li>
+          <a class="nav-item" href="https://www.linkedin.com/in/jeferson-mellado-traipe/" target="_blank" data-target="linkedin"
+            ><i class="fab fa-linkedin"></i>
+            <span class="text">LinkedIn</span></a
+          >
+        </li>
+        <li>
+          <a class="nav-item" href="mailto:devjefersonmellado@gmail.com" target="_blank" data-target="email"
+            ><i class="fas fa-envelope"></i>
+            <span class="text">Email</span></a
+          >
+        </li>
+        <li>
+          <a class="nav-item" href="./src/documents/CV_DEV_JMELLADO.pdf" target="_blank" data-target="download-cv"
+            ><i class="fas fa-file-pdf"></i> <span class="text">Curriculum Vitae</span></a
+          >
+        </li>
       </ul>
     </nav>
     <main>
-      <section id="inicio" class="content-section active">Inicio</section>
+      <!-- Inicio -->
+      <section id="inicio" class="content-section active">
+        <div class="profile-img-btns">
+          <img
+            class="profile-picture"
+            src="./src/img/profile_picture.jfif"
+            alt="Jeferson Mellado, Full Stack Developer, PHP, JS"
+          />
+          <ul class="nav-links">
+            <li>
+              <a class="nav-item" href="https://www.linkedin.com/in/jeferson-mellado-traipe/" target="_blank" data-target="linkedin"
+                ><i class="fab fa-linkedin"></i>
+                <span class="text">LinkedIn</span></a
+              >
+            </li>
+            <li>
+              <a class="nav-item" href="mailto:devjefersonmellado@gmail.com" target="_blank" data-target="email"
+                ><i class="fas fa-envelope"></i>
+                <span class="text">Email</span></a
+              >
+            </li>
+            <li>
+              <a class="nav-item" href="./src/documents/CV_DEV_JMELLADO.pdf" target="_blank" data-target="download-cv"
+                ><i class="fas fa-file-pdf"></i> <span class="text">CV</span></a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="description-profile">
+          <h2>Full Stack</h2>
+          <h3>Developer</h3>
+        </div>
+      </section>
+      <!-- Fin Sección Inicio -->
+
+      <!-- Sección Experiencia -->
       <section id="experiencia" class="content-section">Experiencia</section>
+      <!-- Fin Sección Experiencia -->
+
+      <!-- Sección Proyectos -->
       <section id="proyectos" class="content-section">Proyectos</section>
+      <!-- Fin Sección Proyectos -->
+
+      <!-- Sección Sobre Mi -->
       <section id="sobremi" class="content-section">Sobre Mí</section>
+      <!-- Fin Sección Sobre Mi -->
     </main>
     <script src="./src/js/particles.min.js"></script>
-    <script src="./src/js/main.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
   </body>
 </html>
