--- a/index.html
+++ b/index.html
@@ -46,20 +46,32 @@
           >
         </li>
         <li>
-          <a class="nav-item" href="https://www.linkedin.com/in/jeferson-mellado-traipe/" target="_blank" data-target="linkedin"
+          <a
+            class="nav-item"
+            href="https://www.linkedin.com/in/jeferson-mellado-traipe/"
+            target="_blank"
+            data-target="linkedin"
             ><i class="fab fa-linkedin"></i>
             <span class="text">LinkedIn</span></a
           >
         </li>
         <li>
-          <a class="nav-item" href="mailto:devjefersonmellado@gmail.com" target="_blank" data-target="email"
-            ><i class="fas fa-envelope"></i>
-            <span class="text">Email</span></a
+          <a
+            class="nav-item"
+            href="mailto:devjefersonmellado@gmail.com"
+            target="_blank"
+            data-target="email"
+            ><i class="fas fa-envelope"></i> <span class="text">Email</span></a
           >
         </li>
         <li>
-          <a class="nav-item" href="./src/documents/CV_DEV_JMELLADO.pdf" target="_blank" data-target="download-cv"
-            ><i class="fas fa-file-pdf"></i> <span class="text">Curriculum Vitae</span></a
+          <a
+            class="nav-item"
+            href="./src/documents/CV_DEV_JMELLADO.pdf"
+            target="_blank"
+            data-target="download-cv"
+            ><i class="fas fa-file-pdf"></i>
+            <span class="text">Curriculum Vitae</span></a
           >
         </li>
       </ul>
@@ -75,19 +87,31 @@
           />
           <ul class="nav-links">
             <li>
-              <a class="nav-item" href="https://www.linkedin.com/in/jeferson-mellado-traipe/" target="_blank" data-target="linkedin"
+              <a
+                class="nav-item"
+                href="https://www.linkedin.com/in/jeferson-mellado-traipe/"
+                target="_blank"
+                data-target="linkedin"
                 ><i class="fab fa-linkedin"></i>
                 <span class="text">LinkedIn</span></a
               >
             </li>
             <li>
-              <a class="nav-item" href="mailto:devjefersonmellado@gmail.com" target="_blank" data-target="email"
+              <a
+                class="nav-item"
+                href="mailto:devjefersonmellado@gmail.com"
+                target="_blank"
+                data-target="email"
                 ><i class="fas fa-envelope"></i>
                 <span class="text">Email</span></a
               >
             </li>
             <li>
-              <a class="nav-item" href="./src/documents/CV_DEV_JMELLADO.pdf" target="_blank" data-target="download-cv"
+              <a
+                class="nav-item"
+                href="./src/documents/CV_DEV_JMELLADO.pdf"
+                target="_blank"
+                data-target="download-cv"
                 ><i class="fas fa-file-pdf"></i> <span class="text">CV</span></a
               >
             </li>
@@ -101,15 +125,128 @@
       <!-- Fin Sección Inicio -->
 
       <!-- Sección Experiencia -->
-      <section id="experiencia" class="content-section">Experiencia</section>
+      <section id="experiencia" class="content-section">
+        <div class="title-section">
+          <h3>Experiencia Profesional</h3>
+        </div>
+        <article class="resume-item">
+          <h4>Full Stack Developer</h4>
+          <h5>Agosto 2023 - Actualidad</h5>
+          <p><em>Espex Ingeniería, Temuco, Chile </em></p>
+          <p></p>
+          <ul>
+            <li>
+              Liderar en el diseño, desarrollo e implementación de las
+              aplicaciones requeridas para el proyecto de titulación.
+            </li>
+            <li>
+              Delegar tareas a los miembros del equipo y brindar asesoramiento
+              en todos los aspectos del proyecto.
+            </li>
+            <li>
+              Supervisar el desarrollo de las aplicaciones para garantizar la
+              calidad del proyecto.
+            </li>
+            <li>
+              Diseño, desarrollo y despliegue de API REST con tecnologías
+              ExpressJS, NodeJS y MongoDB como motor de base de datos.
+            </li>
+          </ul>
+          <p></p>
+        </article>
+        <article class="resume-item">
+          <h4>Encargado de proyecto y programador - MIHUERTAFACIL.COM</h4>
+          <h5>Agosto - Noviembre 2022</h5>
+          <p><em>CFT de la Araucania, Lautaro, Chile </em></p>
+          <p></p>
+          <ul>
+            <li>
+              Liderar en el diseño, desarrollo e implementación de las
+              aplicaciones requeridas para el proyecto de titulación.
+            </li>
+            <li>
+              Delegar tareas a los miembros del equipo y brindar asesoramiento
+              en todos los aspectos del proyecto.
+            </li>
+            <li>
+              Supervisar el desarrollo de las aplicaciones para garantizar la
+              calidad del proyecto.
+            </li>
+            <li>
+              Diseño, desarrollo y despliegue de API REST con tecnologías
+              ExpressJS, NodeJS y MongoDB como motor de base de datos.
+            </li>
+          </ul>
+          <p></p>
+        </article>
+      </section>
       <!-- Fin Sección Experiencia -->
 
       <!-- Sección Proyectos -->
-      <section id="proyectos" class="content-section">Proyectos</section>
+      <section id="proyectos" class="content-section">
+        <div class="title-section">
+          <h2>Proyectos</h2>
+        </div>
+      </section>
       <!-- Fin Sección Proyectos -->
 
       <!-- Sección Sobre Mi -->
-      <section id="sobremi" class="content-section">Sobre Mí</section>
+      <section id="sobremi" class="content-section">
+        <div class="title-section">
+          <h2>Sobre Mí</h2>
+        </div>
+        <article class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <h3>Full Stack Developer</h3>
+          <p class="fst-italic">
+            TNS Analista Programador egresado en 2022 con habilidades en HTML,
+            CSS, JavaScript, MongoDB, Express.js, React.js y Node.js. Apasionado
+            por el desarrollo web y capaz de crear interfaces atractivas y
+            funcionales. Capacidad para trabajar en equipo, aprender rápidamente
+            y resolver problemas de manera eficiente. Comprometido con el
+            crecimiento profesional y dispuesto a enfrentar nuevos desafíos.
+          </p>
+          <div class="row">
+            <div class="col-lg-6">
+              <ul>
+                <li>
+                  <i class="bi bi-chevron-right"></i>
+                  <strong>Disponibilidad:</strong> <span>Inmediata</span>
+                </li>
+                <li>
+                  <i class="bi bi-chevron-right"></i>
+                  <strong>Teléfono:</strong> <span>(+569) 5693 3399</span>
+                </li>
+                <li>
+                  <i class="bi bi-chevron-right"></i> <strong>Email:</strong>
+                  <span>jefersonmellado@gmail.com</span>
+                </li>
+                <li>
+                  <i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong>
+                  <span>Lautaro, Chile</span>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-6">
+              <ul>
+                <li>
+                  <i class="bi bi-chevron-right"></i> <strong>Edad:</strong>
+                  <span>28</span>
+                </li>
+                <li>
+                  <i class="bi bi-chevron-right"></i>
+                  <strong>Fecha de Nacimiento:</strong>
+                  <span>12 Sept 1994</span>
+                </li>
+                <li>
+                  <i class="bi bi-chevron-right"></i>
+                  <strong>Estudios:</strong>
+                  <span>TNS Analista Programador</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article>
+      </section>
       <!-- Fin Sección Sobre Mi -->
     </main>
     <script src="./src/js/particles.min.js"></script>
